# breast_cancer_assignment

./: Makefile  README.md  environment.yml  pyproject.toml
breast_cancer_assignment/: __init__.py  dataset.py  features.py  plots.py
breast_cancer_assignment/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-business-understanding.ipynb  1_business_understanding.ipynb  2.0-data-understanding.ipynb  2_data_understanding.ipynb  3.0-data-preparation.ipynb  3_data_preparation.ipynb  4.0-modeling.ipynb  4_modeling.ipynb  5.0-evaluation.ipynb  5_evaluation.ipynb
notebooks/script/: 1.0-business-understanding.py  1_business_understanding.py  2.0-data-understanding.py  2_data_understanding.py  3.0-data-preparation.py  3_data_preparation.py  4.0-modeling.py  4_modeling.py  5.0-evaluation.py  5_evaluation.py
