[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "breast_cancer_assignment"
version = "0.0.1"
description = "Individual Assignment DataOps Specialization 2025-2026"
authors = [
  { name = "Tobias Beekmans" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"
dependencies = []


[tool.ruff]
line-length = 99
src = ["breast_cancer_assignment"]
include = ["pyproject.toml", "breast_cancer_assignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["breast_cancer_assignment"]
force-sort-within-sections = true

